--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.10",
+    "micro-cors": "^0.1.1",
     "mongoose": "^7.6.3",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
@@ -17,6 +19,8 @@
     "stripe": "^14.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/micro-cors": "^0.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
