--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
+    "redis": "^4.6.10",
     "remark-gfm": "^4.0.0",
     "stripe": "^14.2.0"
   },
